--- a/src/index.css
+++ b/src/index.css
@@ -1,69 +1,128 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@font-face {
+  font-family: 'Mona Sans';
+  src:
+    url('fonts/Mona-Sans.woff2') format('woff2 supports variations'),
+    url('fonts/Mona-Sans.woff2') format('woff2-variations');
+  font-weight: 200 900;
+  font-stretch: 75% 125%;
+}
+
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  /* font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif; */
   line-height: 1.5;
   font-weight: 400;
+  list-style: none;
 
-  color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
+  background-color: #0d1117
 }
 
-a {
+main {
+  font-family: "Mona Sans","Mona Sans Fallback",-apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol"
+}
+
+img {
+  max-width: none;
+}
+
+pre {
+  margin-top: 0;
+  margin-bottom: 0;
+  font-family: ui-monospace,SFMono-Regular,SF Mono,Menlo,Consolas,Liberation Mono,monospace;
+}
+
+.text-80 {
+  font-size: 80px;
+  font-weight: 600;
+  line-height: 1;
+  initial-letter: -0.8px;
+}
+
+.text-64 {
+  font-size: 64px;
   font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
+  line-height: 68px;
+  letter-spacing: -1.92px;
 }
 
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+.text-32 {
+  font-size: 32px;
+  font-weight: 400;
+  line-height: 44px;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
+.text-48 {
+  font-size: 48px;
   font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+  line-height: 52px;
+  letter-spacing: -0.03em;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+.text-24 {
+  font-size: 24px;
+  font-weight: 500;
+  line-height: 28px;
+}
+
+.text-16 {
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+}
+
+.text-14 {
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 21px;
+}
+
+.text-12 {
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 20px;
+}
+
+.build-in-opacity {
+  opacity: 0;
+  transition: opacity 0.7s ease;
+}
+
+.build-in-opacity.build-in-animate {
+  opacity: 1;
+}
+
+.build-in-scale-top {
+  transform: scaleY(0);
+  transform-origin: 0 0;
+  transition: transform 0.7s ease;
+}
+
+.build-in-scale-top.build-in-animate {
+  transform: scaleY(1);
+}
+
+.build-in-slideX-left {
+  opacity: 0;
+  transform: translateX(-15px);
+  transition: opacity 0.6s ease, transform 0.6s ease;
+}
+
+.build-in-slideX-left.build-in-animate {
+  opacity: 1;
+  transform: translateX(0);
+}
+
+.build-in-slideX-right {
+  opacity: 0;
+  transform: translateX(15px);
+  transition: opacity 0.6s ease, transform 0.6s ease;
+}
+
+.build-in-slideX-right.build-in-animate {
+  opacity: 1;
+  transform: translateX(0);
 }
